[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hybracter"
description = "An automated long-read first bacterial genome assembly pipeline."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "George Bouras", email = "george.bouras@adelaide.edu.au" }]
dynamic = ["version"]
classifiers = [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "snakemake>=8.0",
    "pyyaml>=6.0",
    "Click>=8.1.3",
    "biopython>=1.76",
]

[project.optional-dependencies]
# deps needed to run the fast unit tests (`pip install .[test]`):
# polars for the concat-script tests; biopython comes from the runtime deps
test = ["pytest", "polars"]

[project.urls]
Homepage = "https://github.com/gbouras13/hybracter"

[project.scripts]
hybracter = "hybracter.__main__:main"
concat-gfas = "hybracter.concat_GFAs_hybracter:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hybracter*"]

# version is read from hybracter/hybracter.VERSION (single line, e.g. 0.13.0)
[tool.setuptools.dynamic]
version = { file = "hybracter/hybracter.VERSION" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that run the full hybracter pipeline (slow; need conda + assembler tools)",
]
# Default run = fast unit tests only. The integration lane overrides with `-m integration`.
addopts = "-m 'not integration'"
